--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "url": "https://github.com/teaware/gatsby-starter-point/issues"
   },
   "dependencies": {
+    "dotenv": "^8.2.0",
     "gatsby": "^2.24.47",
     "gatsby-image": "^2.4.16",
     "gatsby-plugin-collections": "^1.1.3",
@@ -35,6 +36,7 @@
     "react-dom": "^16.13.1",
     "react-headroom": "^3.0.0",
     "react-helmet": "^6.1.0",
+    "react-mailchimp-subscribe": "^2.1.0",
     "react-router-dom": "^5.2.0",
     "react-typography": "^0.16.19",
     "typeface-merriweather": "0.0.72",
